--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pl">
 <head>
 	<meta charset="utf-8" />
-	<title><h2>Kalkulator punktów na sprawdzianie<h2/></title>
+	<title><h2>Kalkulator przeliczający punkty na ocene.<h2/></title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	
@@ -32,7 +32,7 @@
 	<div id="container">
 		<div id="topbar"><p align = "right"></p><br/>
 	<center>
-	Kalkulator przeliczający  punkty ze sprawdzianu, na oceny
+	Kalkulator przelicza punkty ze sprawdzianu na oceny
 	</center>
 	</div>
 	<label for ="a" >podaj maksymalną liczbę punktów do uzyskania<label>
