--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	Kalkulator przelicza punkty ze sprawdzianu na oceny
 	</center>
 	</div>
-	<label for ="a" >podaj maksymalną liczbę punktów do uzyskania<label>
+	<label for ="a" >Podaj maksymalną liczbę punktów na sprawdzianie<label>
 	<input type="text" dir="rtl" id="a">
 	<input type="button" value="Wykonaj" onclick="oblicz()"/>
 	<br>
