--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-	
+<center>	
 	<div id="container">
 		<div id="topbar"><p align = "right"></p><br/>
 	<center>
@@ -49,6 +49,6 @@
 	<div class = "nn" id="p59">0</div> 	 <div class = "nn" id="p51">0</div>
 	</div>
 	</div>
-	
+	</center>
 </body>
 </html>
